Fixing health-daily alignment bug for MacOS > Chrome > 1280x800.

--- a/app/styles/_general.scss
+++ b/app/styles/_general.scss
@@ -724,8 +724,12 @@ body {
 // Health Daily
 //
 
-.health-daily-avatar, .total-participants {
+.health-daily-avatar {
   float: left;
+}
+
+.total-participants {
+  float: right;
 }
 
 .health-daily-avatar {
